--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,5 @@
-p {
-  font-family: Lato;
-}
-
 header {
-  background: url(https://assets.billboard.com/assets/1544728669/images/charts/header-background/desktop/bb-charts-hot-100.svg?e5261e8a0999849f9cef);
+  background: url(https://assets.billboard.com/assets/1565202395/images/charts/header-background/desktop/bb-charts-hot-100.svg);
   color: white;
   padding: 1rem 1rem 0.5rem 1rem;
 }
