se agrega vista agregar tv

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Hellow world!
-</p>
+<header>
+  <h1>TV SERIES!</h1>
+  <p>Your favorite TV Shows</p>
+</header>
+
+<div class="add">
+  <button (click)="add()">ADD</button>
+</div>
