--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,7 @@
 <div class="add">
   <button (click)="add()">ADD</button>
 </div>
+<div class="card" *ngFor="let show of showList | async">
+  <img (click)="updatePicture(show.id)" [src] = "show.picture" width="50px" height="50px"/>
+  <input (change)="updateName(show.id, $event.target.value)" [value]="show.name">
+</div>
